Switched composable collapse method to CSS display instead of react rendering to fix javascript binding issues

--- a/app/assets/stylesheets/koi/components/_composable.scss
+++ b/app/assets/stylesheets/koi/components/_composable.scss
@@ -112,6 +112,10 @@ $composable-field-gutters: $xxx-small-unit;
 
 .composable--field-template {
   padding: $panel-padding;
+
+  .composable--field__collapsed & {
+    display: none;
+  }
 }
 
 .composable--field--unsupported {
